<resources>
    <string name="app_name">AboutMe</string>
    <string name="action_grid_layout">卡片布局</string>
    <string name="action_linear_layout">线性布局</string>
    <string name="guide_next_button_description">Next</string>
    <string name="guide_finish_button_description">Finish</string>
    <string name="guide_pre_button_description">Pre</string>
    <string name="guide_section_1">Add your packages quickly and easily</string>
    <string name="guide_intro_1">Support 640+ express companies all over the world.</string>
    <string name="guide_section_2">Input numbers by just one touch</string>
    <string name="guide_intro_2">Scan the number and then, they are recognized.</string>
    <string name="guide_section_3">Keep the delivery status updated</string>
    <string name="guide_intro_3">Push notification when the delivery status is refreshed, so you can get the latest information.</string>
    <string name="guide_finish_button_description_wait">Preparing, please wait…</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_main">首页</string>
    <string name="title_activity_settings">设置</string>
    <string name="title_activity_register">注册</string>
    <string name="title_activity_about_me">关于我</string>
    <string name="title_activity_account">账户</string>
    <string name="title_activity_update_password">更改密码</string>
    <string name="title_activity_edit_message">写动态</string>
    <string name="title_activity_app_permission">应用权限</string>
    <string name="prompt_nickname">昵称</string>
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="prompt_re_password">确认密码</string>
    <string name="error_invalid_email">请输入正确的邮箱地址</string>
    <string name="error_invalid_password">这个密码太短了</string>
    <string name="error_invalid_nickname">这个昵称太短了</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">此字段是必须的</string>
    <string name="forgot_password">忘记密码</string>
    <string name="action_register">注册</string>
    <string name="action_save">保存</string>
    <string name="action_send">发表</string>
    <string name="action_close">关闭</string>
    <string name="action_login">登录</string>
    <string name="nav_title_app">应用</string>
    <string name="nav_title_blog">博客</string>
    <string name="nav_title_github">开源</string>
    <string name="nav_title_setting">设置</string>
    <string name="nav_title_moments">动态</string>
    <string name="nav_title_moments_detail">动态详情</string>
    <string name="nav_title_about">关于</string>
    <string name="nav_title_exit">退出</string>
    <string name="nav_title_theme">主题</string>
    <string name="change_theme_text">更改主题色</string>
    <string name="navigation_drawer_open">打开抽屉</string>
    <string name="navigation_drawer_close">关闭抽屉</string>
    <string name="item_swipe_dismissed">Dismissed</string>
    <string name="item_swipe_undo">Undo</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_logout">退出登录</string>
    <string name="action_confirm">确定</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="btn_retry">点击重试</string>
    <string name="title_activity_app_detail">应用详情</string>
    <string name="app_state_download">下载</string>
    <string name="app_state_paused">暂停</string>
    <string name="app_state_error">失败</string>
    <string name="app_state_waiting">等待</string>
    <string name="app_state_downloaded">安装</string>
    <string name="no_more_data">没有更多数据了</string>
    <string name="title_activity_app_picture_detail">AppPictureDetailActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>