<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.u2tzjtne.aboutme.ui.activity.AccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <!--头像-->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/splash" />

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="编辑资料" />

        <!--昵称-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@color/white_pressed"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_nickname"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:enabled="false"
                android:text="U2tzJTNE"
                android:textSize="20sp" />

        </LinearLayout>

        <!--邮箱-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@color/white_pressed"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_email"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:enabled="false"
                android:text="770096355@qq.com"
                android:textSize="20sp" />

        </LinearLayout>
        <!--修改密码-->
        <RelativeLayout
            android:id="@+id/change_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/account_list_bg_selector"
            android:gravity="center_vertical"
            android:paddingStart="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="更改密码"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="34dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                app:srcCompat="@drawable/ic_right_gray" />
        </RelativeLayout>
        <!--退出登录-->

        <Button
            android:id="@+id/btn_logout"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_logout"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:theme="@style/AppTheme.Button" />

    </LinearLayout>
</ScrollView>

